Add the docs page and footer to the example

--- a/example/src/styles/_constants.scss
+++ b/example/src/styles/_constants.scss
@@ -17,3 +17,7 @@ $screen-lg-min: $screen-lg !default;
 $vue-color: #3fb37f;
 $gray-color: #585858;
 $transition-time: 0.5s;
+
+$header-height: 75px;
+$footer-height: 150px;
+$footer-margin: 50px;
