Prepare for the release

--- a/example/docs/.vuepress/styles/_fonts.scss
+++ b/example/docs/.vuepress/styles/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'ArBerkley';
-    src: url('/fonts/ARBERKLEY.woff2') format('woff2'),
-        url('/fonts/ARBERKLEY.woff') format('woff');
+    src: url('/vue-advanced-cropper/fonts/ARBERKLEY.woff2') format('woff2'),
+        url('/vue-advanced-cropper/fonts/ARBERKLEY.woff') format('woff');
     font-weight: 100;
     font-style: normal;
 }
