--- a/example/docs/.vuepress/styles/index.styl
+++ b/example/docs/.vuepress/styles/index.styl
@@ -1,6 +1,6 @@
 .navbar
 	background-color: #3fb37f;
-	background-image: url('/background.png');
+	background-image: url('/vue-advanced-cropper/background.png');
 	background-size: cover;
 	color: white;
 	display: flex;
