Fix the documentation mistakes

--- a/example/docs/.vuepress/styles/index.styl
+++ b/example/docs/.vuepress/styles/index.styl
@@ -14,7 +14,9 @@
 		top 0
 		left 0
 		padding-left 0
-		padding-right 24px
+		padding-right 32px
+		padding-top 0
+		padding-bottom 0
 
 	.site-name
 		color: white !important;
