--- a/example/docs/.vuepress/styles/index.styl
+++ b/example/docs/.vuepress/styles/index.styl
@@ -6,9 +6,10 @@
 	display: flex;
 	align-items center;
 	padding: 0.7rem 1.5rem !important;
-	.icon.outbound {
+	.icon.outbound
 		display: none !important;
-	}
+	.repo-link
+		display: none !important;
 	.sidebar-button
 		position: relative
 		top 0
