Add the possibility to move and resize background

--- a/example/docs/.vuepress/styles/index.styl
+++ b/example/docs/.vuepress/styles/index.styl
@@ -1,3 +1,7 @@
+.sidebar
+	.repo-link
+		display: none !important;
+
 .navbar
 	background-color: #3fb37f;
 	background-image: url('/vue-advanced-cropper/background.png');
