Add the algorithms sections to the documentation

--- a/example/docs/.vuepress/styles/_constants.scss
+++ b/example/docs/.vuepress/styles/_constants.scss
@@ -21,3 +21,8 @@ $transition-time: 0.5s;
 $header-height: 75px;
 $footer-height: 150px;
 $footer-margin: 50px;
+
+$boundaries-color: #5B74BC;
+$cropper-color: #3fb37f;
+$area-color: #bcbcbc;
+$stretcher-color: #4966c4;
