Finalize the new features

--- a/example/docs/.vuepress/styles/index.styl
+++ b/example/docs/.vuepress/styles/index.styl
@@ -29,6 +29,7 @@
 		font-weight: normal !important;
 		font-size: 1.8rem !important;
 		padding-left 8px
+		white-space: nowrap;
 	.links
 		background: none !important;
 		position: relative !important;
