Add the new possibilities to customize the stencils

--- a/example/docs/.vuepress/styles/index.styl
+++ b/example/docs/.vuepress/styles/index.styl
@@ -30,6 +30,8 @@
 		font-size: 1.8rem !important;
 		padding-left 8px
 		white-space: nowrap;
+		height: 100%
+		vertical-align: middle
 	.links
 		background: none !important;
 		position: relative !important;
