Update the most of the documentation parts

--- a/example/docs/.vuepress/styles/index.styl
+++ b/example/docs/.vuepress/styles/index.styl
@@ -51,7 +51,11 @@
 	.nav-links a.router-link-active
 		opacity: 1
 
-
+.theme-default-content:not(.custom)
+	> h3 {
+		padding-top: 6.5rem
+		font-size: 1.17em;
+	}
 
 @font-face {
     font-family: 'ArBerkley';
