Fix the documentation mistakes

--- a/example/docs/.vuepress/styles/index.styl
+++ b/example/docs/.vuepress/styles/index.styl
@@ -32,6 +32,7 @@
 		white-space: nowrap;
 		height: 100%
 		vertical-align: middle
+		width: 100% !important
 	.links
 		background: none !important;
 		position: relative !important;
